LOG:

         - 0.7.2

20120110 - 0.7.1 fixed bug 3470598
                 Serialization of XID format id changed from hexadecimal
                 (4c495841) to decimal (1279875137) to deal with the negative
                 value (-1) of NULL XID and mixed 32/64 bit environments
                 (ffffffff is not equal to -1 for a x86-64 Linux)

20120103 - 0.7.0 First beta release

20111128 - 0.5.35 Intel/AMD 64 bit architecture passed test phase

20111113 - 0.5.34 a switch file for MySQL is now available
                  the package supplies some examples that show how LIXA can
                  be used in conjunction with MySQL, PostgreSQL, Oracle and
                  DB2 performing DTP

20110927 - 0.5.33 library liblixabmt was renamed to liblixab
                  library liblixacmt was renamed to liblixac
                  a switch file for PostgreSQL is now available
                  the package supplies some examples that show how LIXA can
                  be used in conjunction with PostgreSQL, Oracle and DB2
                  performing distributed transaction processing

20110504 - 0.5.32 the package supplies an example that shows how LIXA can
                  be used in conjunction with Oracle Database Server and IBM
                  DB2, performing a real distributed transaction

20110426 - 0.5.31 the package supplies an example that shows how LIXA can
                  be used in conjunction with IBM DB2

20110419 - 0.5.30 the package supplies an example that shows how LIXA can
                  be used in conjunction with Oracle Database Server

20110401 - 0.5.29 "make install" installs the HTML version of the manual in
                  the standard doc directory
                  "make dist" injects the HTML version of the manual in the
                  package
                  utility "lixat" (LIXA test) has been added 

20110228 - 0.5.28 changed "trnmgr" with "sttsrv" and "trnmgrs" with "sttsrvs"